# Rust-SqLite-ETL-CRUD-CLI

./: Cargo.toml  README.md  nba  nba.csv
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
src/: delete.rs  drop_data.rs  extract.rs  hold.rs  main.rs  query.rs  transform_load.rs  update_db.rs
