[package]
name = "test_v_python"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0" # for reading and writing CSV files
sys-info = "0.9.1" # for getting system information
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
scraper = "0.18.1"
regex = "1.10.2"
rusqlite = "0.29.0"
prettytable-rs = "0.10.0"
clap = "3.0.0-beta.5"

